# zsomeip

./: .gitmodules  CMakeLists.txt  README.md
client-service/: ZsomeIpService.cpp  ZsomeIpService.h
conf/: pubsub-local.json  pubsub-reliable.json  service-local.json  service-reliable.json
definitions/: CMakeLists.txt
definitions/include/zsomeip-defs/: AgentDefinition.h  MethodDefinition.h  TopicDefinition.h  ZsomeIpApp.h
definitions/src/: MethodDefinition.cpp  TopicDefinition.cpp  ZsomeIpApp.cpp
publish-subscribe/: ZsomeIpPubsub.cpp  ZsomeIpPubsub.h
weather-example/: Weather.zs  client-service.cpp  publish-subscribe.cpp
